# matuwrap

./: .gitignore  Makefile  README.md  benchmark.py  ex.py  hue_gui.py  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs
src/matuwrap/: __init__.py  cli.py  wrp_native.pyi
src/matuwrap/commands/: audio.py  get_colors.py  hue.py  install.py  monitors.py  sunshine.py
src/matuwrap/core/: __init__.py  colors.py  hyprland.py  notify.py  systemd.py  theme.py
src/matuwrap/gui/: hue_gui.py
src/pywrap/: __init__.py  cli.py
src/pywrap/commands/: audio.py  hue.py  monitors.py  sunshine.py
src/pywrap/core/: __init__.py  colors.py  hyprland.py  notify.py  theme.py
src/wrappers/: __init__.py  cli.py  wrp_native.pyi
src/wrappers/commands/: audio.py  monitors.py  sunshine.py
src/wrappers/core/: __init__.py  colors.py  hyprland.py  notify.py  systemd.py  theme.py
tests/: __init__.py  test_hyprland.py  test_performance.py  test_theme.py
