[project]
name = "pywrap"
version = "0.1.1"
description = "Python wrappers for Hyprland system utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "rich>=14.0.0",
    "wcwidth>=0.2.13",
]

[project.scripts]
wrp = "pywrap.cli:main"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
manifest-path = "rust/Cargo.toml"
module-name = "pywrap.wrp_native"
