[project]
name = "matuwrap"
version = "0.1.2"
description = "Hyprland system utilities with matugen-themed output"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "glaze",
    "pyside6>=6.10.1",
    "requests>=2.32.5",
    "rich>=14.0.0",
    "wcwidth>=0.2.13",
]


[project.scripts]
wrp = "matuwrap.cli:main"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "src"
manifest-path = "rust/Cargo.toml"
module-name = "matuwrap.wrp_native"

[tool.coverage.run]
source = ["src/matuwrap"]
omit = ["*/tests/*", "*/__pycache__/*", "*/wrp_native*"]

[tool.coverage.report]
fail_under = 10
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "except ImportError:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.uv.sources]
glaze = { git = "https://github.com/awareness10/glaze" }

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.2",
]
